--- a/products.html
+++ b/products.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="assets/terraleaf.png">
   <title>All Products</title>
   <style>
 
-
-
-header {
+    header {
       background-color: #ffffff;
       padding: 15px 20px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.05);
@@ -27,7 +26,7 @@ header {
     }
 
     .call-us-button a {
-      background-color: #5baa5d; /* Green button */
+      background-color: #9BA17B; /* Green button */
       color: white;
       padding: 8px 16px;
       text-decoration: none;
@@ -40,7 +39,7 @@ header {
     }
 
     .call-us-button a:hover {
-      background-color: #45a049;
+      background-color: #6c996f;
     }
 
     .call-icon {
@@ -341,41 +340,63 @@ header {
 
     /*footer*/
     .footer {
-      background-color: #222831;
-      color: #ffffff;
-      padding: 40px 20px 20px;
-      font-size: 1.5rem;
+        background-color: #222831;
+        color: #ffffff;
+        padding: 40px 20px 20px;
+        font-size: 0.9rem;
+        font-family: 'Mulish', sans-serif;
     }
+
 
     .footer-content {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      align-items: flex-start;
       max-width: 1200px;
       margin: 0 auto;
       gap: 10px;
     }
 
-    .contact-info {
-      flex: 1 1 300px;
+    .footer-column {
+      flex: 1 1 250px;
     }
 
-    .contact-info h3 {
+    .footer-column h3 {
       font-size: 1.8rem;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
       color: #cf4c2b;
+    }
+
+    .footer-column ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .footer-column ul li {
+      margin-bottom: 10px;
+    }
+
+    .footer-column ul li a {
+      color: #ddd;
+      text-decoration: none;
+      font-size: 1rem;
+    }
+
+    .footer-column ul li a:hover {
+      color: #ffffff;
     }
 
     .contact-info p, .contact-info a {
       margin: 8px 0;
       color: #ddd;
       text-decoration: none;
+      font-size: 1rem;
     }
 
-    .map-container {
-      flex: 1 1 400px;
-      min-height: 250px;
+    .map-container-full {
+      max-width: 1200px;
+      margin: 30px auto 0;
       border-radius: 10px;
       overflow: hidden;
     }
@@ -383,21 +404,24 @@ header {
     .footer-bottom {
       text-align: center;
       margin-top: 20px;
-      font-size: 0.9rem;
+      font-size: 1rem;
       color: #aaa;
     }
 
-    /* Mobile */
     @media (max-width: 768px) {
       .footer-content {
         flex-direction: column;
         align-items: center;
         text-align: center;
-        gap: 5px;
+        gap: 30px;
       }
 
-      .contact-info, .map-container {
+      .footer-column {
         width: 100%;
+      }
+
+      .map-container-full iframe {
+        height: 200px;
       }
     }
 
@@ -427,9 +451,9 @@ header {
           <!-- Nav Menu -->
           <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="#">About</a>
-            <a href="#" class="active">Products</a>
-            <a href="#">Contact</a>
+            <a href="about.html">About</a>
+            <a href="products.html" class="active">Products</a>
+            <a href="#contact">Contact</a>
           </div>          
         </nav>
       </header>
@@ -437,9 +461,9 @@ header {
       <!-- SIDE DRAWER FOR SMALL SCREEN -->
       <div class="side-drawer" id="sideDrawer">
         <a href="index.html" style="text-decoration: none;">Home</a>
-        <a href="#" style="text-decoration: none;">About</a>
-        <a href="#" style="text-decoration: none;">Products</a>
-        <a href="#" style="text-decoration: none;">Contact</a>
+        <a href="about.html" style="text-decoration: none;">About</a>
+        <a href="products.html" style="text-decoration: none;">Products</a>
+        <a href="#contact" style="text-decoration: none;">Contact</a>
       </div>
 
   <h2 style="text-align: center; background-color: white; margin-top: 30px;">All Our Products</h2>
@@ -515,32 +539,50 @@ header {
 
 
 
+  <!-- Footer -->
   <footer class="footer" id="contact">
     <div class="footer-content">
-  
-      <div class="contact-info">
-        <h3>Reach us at</h3>
-        <p>📞 +91 9345326030</p>
-        <p>📞 +91 9514171946</p>
-        <p>📧 <a href="mailto:info@theterraleafs.com">info@theterraleafs.com        </a></p>
-        <p>🏠 No.12, Velusamypuram, 2nd Street, Karur - 639002, TamilNadu, India - IN        </p>
+      <!-- Column 1: Know More -->
+      <div class="footer-column">
+        <h3>Know More</h3>
+        <ul>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="/policy page/terms.html">Terms of Service</a></li>
+        </ul>
       </div>
 
-      <div class="map-container">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3917.0433283451574!2d78.05125359999999!3d10.966964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baa2f1cc7e28c9f%3A0x6b40776ae9761ca1!2sVeluswamypuram%2C%20Karur%2C%20Tamil%20Nadu%20639002!5e0!3m2!1sen!2sin!4v1714227300768!5m2!1sen!2sin"
-          width="100%"
-          height="250"
-          style="border:0;"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+      <!-- Column 2: Policies -->
+      <div class="footer-column">
+        <h3>Policies</h3>
+        <ul>
+          <li><a href="policy page/shipping policy.html">Shipping Policy</a></li>
+          <li><a href="policy page/refund policy.html">Refund Policy</a></li>
+          <li><a href="policy page/privacy policy.html">Privacy Policy</a></li>
+        </ul>
       </div>
-          
-  
+
+      <!-- Column 3: Contact Info -->
+      <div class="footer-column contact-info">
+        <h3>Contact Us</h3>
+        <p>📞 +91 9345326030</p>
+        <p>📞 +91 9514171946</p>
+        <p>📧 <a href="mailto:info@theterraleafs.com">info@theterraleafs.com</a></p>
+        <p>🏠 No.12, Velusamypuram, 2nd Street,<br> Karur - 639002, TamilNadu, India</p>
+      </div>
     </div>
-  
+
+    <div class="map-container-full">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3917.0433283451574!2d78.05125359999999!3d10.966964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baa2f1cc7e28c9f%3A0x6b40776ae9761ca1!2sVeluswamypuram%2C%20Karur%2C%20Tamil%20Nadu%20639002!5e0!3m2!1sen!2sin!4v1714227300768!5m2!1sen!2sin"
+        width="100%"
+        height="300"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+
     <div class="footer-bottom">
       <p>&copy; 2025 The Terra Leaf. All Rights Reserved.</p>
     </div>
